apps/netbox/netbox-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
  namespace: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: netbox-worker
  template:
    metadata:
      labels:
        app: netbox-worker
    spec:
      containers:
        - name: netbox-worker
          image: nexus.lab.mxe11.nl/netbox/netbox:1.0.6
          imagePullPolicy: IfNotPresent
          command:
            - /opt/netbox/venv/bin/python
          args:
            - /opt/netbox/netbox/manage.py
            - rqworker
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
